--- a/index.html
+++ b/index.html
@@ -15,40 +15,42 @@
                 <img src="https://uploads-ssl.webflow.com/64d1a97b791d8ca9bb004633/64d341b746d118ef09197a8e_Logo.svg"
                     loading="lazy" alt="Pinecone logo" class="pineconelogoblack">
             </div>
-            <div class="navigation">
-                <ul>
-                    <li><a href="#">Хөгжүүлэгч</a></li>
-                    <li><a href="#">UX/UI Дизайнер</a></li>
-                    <li><a href="#">Түгээмэл асуулт,хариулт</a></li>
-                </ul>
-            </div>
-            <div class="login">
-                <button class="btn btn-1">
-                    <a href="#">Зөвлөгөө авах</a>
-                </button>
-                <button class="btn btn-2">
-                    <a href="#">Бүртгүүлэх</a>
-                </button>
+            <div class="inner-container">
+                <div class="navigation">
+                    <ul>
+                        <li><a href="#">Хөгжүүлэгч</a></li>
+                        <li><a href="#">UX/UI Дизайнер</a></li>
+                        <li><a href="#">Түгээмэласуулт,хариулт</a></li>
+                    </ul>
+                </div>
+                <div class="login">
+                    <button class="btn btn-1">
+                        <a href="#">Зөвлөгөө авах</a>
+                    </button>
+                    <button class="btn btn-2">
+                        <a href="#">Бүртгүүлэх</a>
+                    </button>
+                </div>
             </div>
         </nav>
     </div>
     <div class="container">
         <section class="head">
             <div class="header">
-                <h1 style="color:#18ba51;">Software инженер, <br> UX/UI дизайны</h1> ангийн <br> элсэлт эхэллээ
-            </div>
-            <div class="paragraph">
-                6 сарын дотор програм хангамжийн салбарт үнэлэгдэхүйц ур чадвартай мэргэжилтэн <br> болоход тань туслах
-                сургалтын хөтөлбөр
-            </div>
-            <div class="sigin">
-                <button class="btn btn-3">
-                    <a href="#">Бүртгүүлэх</a>
-                </button>
-                <button class="btn btn-4">
-                    <a href="#">Зөвлөгөө авах</a>
-                </button>
-            </div>
+                <span style="color:#18ba51;">Software инженер, <br> UX/UI дизайны</span> ангийн <br>элсэлт эхэллээ
+                <div class="paragraph">
+                    6 сарын дотор програм хангамжийн салбарт үнэлэгдэхүйц ур чадвартай мэргэжилтэн <br> болоход тань
+                    туслах
+                    сургалтын хөтөлбөр
+                </div>
+                <div class="sigin">
+                    <button class="btn btn-3">
+                        <a href="#">Бүртгүүлэх</a>
+                    </button>
+                    <button class="btn btn-4">
+                        <a href="#">Зөвлөгөө авах</a>
+                    </button>
+                </div>
         </section>
     </div>
     <div class="container video">
@@ -101,6 +103,48 @@
             </div>
         </div>
     </div>
+    <section class="section-1">
+        <div class="container">
+            <div class="content">
+                <div class="header-2">
+                    <span><span style="color: #18ba51;">Хаанаас эхлэх вэ?</span> Хөгжүүлэгч,</span> <br> эсвэл Дизайнер
+                    болмоор
+                    байна.
+                </div>
+                <div class="cards">
+                    <div class="card">
+                        <img src="https://uploads-ssl.webflow.com/64d1a97b791d8ca9bb004633/64ddfdfcb2ce60c1cf4935fe_ImageLaaast-1.jpg"
+                            alt="">
+                        <div>
+                            <h2>Нээлттэй өдөрлөг</h2>
+                            <p>Уг нээлттэй өдөрлөгт хүрэлцэн ирснээр Та хөтөлбөрийн талаарх <br> мэдээллийг цогц
+                                байдлаар
+                                авах боломжтой.</p>
+                        </div>
+                        <div class="min-btn">
+                            <div>guywqgduyg</div>
+                            <div>Өдөрлөгийн цаг сонгох</div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <img src="https://uploads-ssl.webflow.com/64d1a97b791d8ca9bb004633/64ddfdfc0e56ffe621eb5301_ImageLaaast.jpg"
+                            alt="">
+                        <div>
+                            <h2>Нээлттэй өдөрлөг</h2>
+                            <p>Уг нээлттэй өдөрлөгт хүрэлцэн ирснээр Та хөтөлбөрийн талаарх <br> мэдээллийг цогц
+                                байдлаар
+                                авах боломжтой.</p>
+                        </div>
+                        <div class="min-btn">
+                            <div></div>
+                            <div>Өдөрлөгийн цаг сонгох</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
 
 </body>
 
