--- a/index.html
+++ b/index.html
@@ -9,31 +9,33 @@
 </head>
 
 <body>
-    <div class="container">
-        <nav>
-            <div>
-                <img src="https://uploads-ssl.webflow.com/64d1a97b791d8ca9bb004633/64d341b746d118ef09197a8e_Logo.svg"
-                    loading="lazy" alt="Pinecone logo" class="pineconelogoblack">
-            </div>
-            <div class="inner-container">
-                <div class="navigation">
-                    <ul>
-                        <li><a href="#">Хөгжүүлэгч</a></li>
-                        <li><a href="#">UX/UI Дизайнер</a></li>
-                        <li><a href="#">Түгээмэласуулт,хариулт</a></li>
-                    </ul>
+    <header class="charset">
+        <div class="container">
+            <nav>
+                <div>
+                    <img src="https://uploads-ssl.webflow.com/64d1a97b791d8ca9bb004633/64d341b746d118ef09197a8e_Logo.svg"
+                        loading="lazy" alt="Pinecone logo" class="pineconelogoblack">
                 </div>
-                <div class="login">
-                    <button class="btn btn-1">
-                        <a href="#">Зөвлөгөө авах</a>
-                    </button>
-                    <button class="btn btn-2">
-                        <a href="#">Бүртгүүлэх</a>
-                    </button>
+                <div class="inner-container">
+                    <div class="navigation">
+                        <ul>
+                            <li><a href="#">Хөгжүүлэгч</a></li>
+                            <li><a href="#">UX/UI Дизайнер</a></li>
+                            <li><a href="#">Түгээмэласуулт,хариулт</a></li>
+                        </ul>
+                    </div>
+                    <div class="login">
+                        <button class="btn btn-1">
+                            <a href="#">Зөвлөгөө авах</a>
+                        </button>
+                        <button class="btn btn-2">
+                            <a href="#">Бүртгүүлэх</a>
+                        </button>
+                    </div>
                 </div>
-            </div>
-        </nav>
-    </div>
+            </nav>
+        </div>
+    </header>
     <div class="container">
         <section class="head">
             <div class="header">
@@ -107,7 +109,7 @@
         <div class="container">
             <div class="content">
                 <div class="header-2">
-                    <span><span style="color: #18ba51;">Хаанаас эхлэх вэ?</span> Хөгжүүлэгч,</span> <br> эсвэл Дизайнер
+                    <span style="color: #18ba51;">Хаанаас эхлэх вэ?</span> Хөгжүүлэгч,<br> эсвэл Дизайнер
                     болмоор
                     байна.
                 </div>
@@ -122,27 +124,72 @@
                                 авах боломжтой.</p>
                         </div>
                         <div class="min-btn">
-                            <div>guywqgduyg</div>
-                            <div>Өдөрлөгийн цаг сонгох</div>
+                            <div>
+                                Өдөрлөгийн цаг сонгох
+                                <!-- <img src="https://uploads-ssl.webflow.com/64d1a97b791d8ca9bb004633/64d2f9f4b786a16e8bc3faec_rightIcon.svg"
+                                    alt=""> -->
+                            </div>
                         </div>
                     </div>
                     <div class="card">
                         <img src="https://uploads-ssl.webflow.com/64d1a97b791d8ca9bb004633/64ddfdfc0e56ffe621eb5301_ImageLaaast.jpg"
                             alt="">
                         <div>
-                            <h2>Нээлттэй өдөрлөг</h2>
-                            <p>Уг нээлттэй өдөрлөгт хүрэлцэн ирснээр Та хөтөлбөрийн талаарх <br> мэдээллийг цогц
-                                байдлаар
-                                авах боломжтой.</p>
+                            <h2>Ганцаарчилсан зөвлөгөө</h2>
+                            <p>Та ганцаарчилсан уулзалтаар Leap хөтөлбөрийн талаар өөрийн хүссэн <br> мэдээллээ ая
+                                тухтай
+                                аваарай.</p>
                         </div>
                         <div class="min-btn">
-                            <div></div>
-                            <div>Өдөрлөгийн цаг сонгох</div>
+                            <div>
+                                цаг товлох
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
+        </div>
+    </section>
+    <section class="section-2">
+        <div class="container">
+            <div class="content-b">
+                <div class="header-3">
+                    Хэрхэн <span style="color: #18ba51;">пайнкоун</span> <br>
+                    академид элсэх вэ?
+                </div>
+                <div class="step-cards">
+                    <div class="step">
+                        <div>
+                            <h6>1-р Алхам</h6>
+                            <h2>Туршилтын анги</h2>
+                        </div>
+                        <p>Туршилтын ангид суралцан web хөгжүүлэлтийн анхан шатны мэдлэг ойлголтыг авч, цаашид өөрийн
+                            суралцах хүсэл сонирхол болон суралцах чадвараа мэдэж авна.</p>
+                        <button class="step-btn">
+                            <a href="#">Бүртгүүлэх</a>
+                        </button>
+                    </div>
+                    <div class="step">
+                        <div>
+                            <h6>2-р Алхам</h6>
+                            <h2>Шийдвэр гаргалт</h2>
+                        </div>
+                        <p>Манай заах арга барил, хичээлийн хөтөлбөр, мэргэжил болон энэ салбарт ажиллах хүсэл
+                            эрмэлзэлтэй байгаагаа мэдэж авч цааш үргэлжлүүлэн суралцах шийдвэр гаргана. </p>
+
+                    </div>
+                    <div class="step">
+                        <div>
+                            <h6>3-р Алхам</h6>
+                            <h2>Үндсэн анги</h2>
+                        </div>
+                        <p>Үндсэн ангид суралцан ирээдүй болсон технологийн салбарт ажиллах “Full Stack Developer эсвэл
+                            UX Дизайнер” болж амжилттай төгсөнө.</p>
+
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
